; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_syscalls.c_chflags1.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_syscalls.c_chflags1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vnode_attr = type { i32 }

@va_flags = common dso_local global i32 0, align 4
@KAUTH_VNODE_NOIMMUTABLE = common dso_local global i32 0, align 4
@ENOTSUP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @chflags1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @chflags1(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.vnode_attr, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %10 = call i32 @VATTR_INIT(%struct.vnode_attr* %7)
  %11 = load i32, i32* @va_flags, align 4
  %12 = load i32, i32* %5, align 4
  %13 = call i32 @VATTR_SET(%struct.vnode_attr* %7, i32 %11, i32 %12)
  %14 = load i32, i32* %4, align 4
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @vnode_authattr(i32 %14, %struct.vnode_attr* %7, i32* %8, i32 %15)
  store i32 %16, i32* %9, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %3
  br label %44

19:                                               ; preds = %3
  %20 = load i32, i32* %8, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %31

22:                                               ; preds = %19
  %23 = load i32, i32* %4, align 4
  %24 = load i32, i32* %8, align 4
  %25 = load i32, i32* @KAUTH_VNODE_NOIMMUTABLE, align 4
  %26 = or i32 %24, %25
  %27 = load i32, i32* %6, align 4
  %28 = call i32 @vnode_authorize(i32 %23, i32* null, i32 %26, i32 %27)
  store i32 %28, i32* %9, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %31

30:                                               ; preds = %22
  br label %44

31:                                               ; preds = %22, %19
  %32 = load i32, i32* %4, align 4
  %33 = load i32, i32* %6, align 4
  %34 = call i32 @vnode_setattr(i32 %32, %struct.vnode_attr* %7, i32 %33)
  store i32 %34, i32* %9, align 4
  %35 = load i32, i32* %9, align 4
  %36 = icmp eq i32 %35, 0
  br i1 %36, label %37, label %43

37:                                               ; preds = %31
  %38 = load i32, i32* @va_flags, align 4
  %39 = call i32 @VATTR_IS_SUPPORTED(%struct.vnode_attr* %7, i32 %38)
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %43, label %41

41:                                               ; preds = %37
  %42 = load i32, i32* @ENOTSUP, align 4
  store i32 %42, i32* %9, align 4
  br label %43

43:                                               ; preds = %41, %37, %31
  br label %44

44:                                               ; preds = %43, %30, %18
  %45 = load i32, i32* %4, align 4
  %46 = call i32 @vnode_put(i32 %45)
  %47 = load i32, i32* %9, align 4
  ret i32 %47
}

declare dso_local i32 @VATTR_INIT(%struct.vnode_attr*) #1

declare dso_local i32 @VATTR_SET(%struct.vnode_attr*, i32, i32) #1

declare dso_local i32 @vnode_authattr(i32, %struct.vnode_attr*, i32*, i32) #1

declare dso_local i32 @vnode_authorize(i32, i32*, i32, i32) #1

declare dso_local i32 @vnode_setattr(i32, %struct.vnode_attr*, i32) #1

declare dso_local i32 @VATTR_IS_SUPPORTED(%struct.vnode_attr*, i32) #1

declare dso_local i32 @vnode_put(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
